# GESTURE

./: .gitignore  AutoSave_Test.skp  Test.skb  Test.skp  gesture.rb  loadpath.html  loadpath.rb  run.rb  socketTCP.rb  testsocket.rb
GESTURE/: repere.html  socket.rb  splashscreen.html
GESTURE/Control/: control.html  gesture.css  gesture.min.css  jquery.mobile.structure-1.3.0.css  menu.html  repere.html  splashscreen - Copie.html  splashscreen.html  test stream.html
GESTURE/Interpretation/test sigmanil/premiertest/premiertest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gesture_Recognition.cpp  main.cpp  premier_test.sln  premiertest.vcxproj  premiertest.vcxproj.filters
GESTURE/Interpretation/test sigmanil/premiertest/premiertest/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  premiertest.exp  premiertest.ilk  premiertest.lastbuildstate  premiertest.lib  premiertest_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
GESTURE/Interpretation/test sigmanil/premiertest/premiertest/premiertest.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  premiertest.lastbuildstate  premiertest.write.1.tlog  premiertest_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
GESTURE/Interpretation/test sigmanil/premiertest/premiertest/test/: CL.write.1.tlog  cl.command.1.tlog  premiertest.lastbuildstate
GESTURE/Interpretation/test sigmanil/premiertest/premiertest/test2/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  premiertest.lastbuildstate
GESTURE/Interpretation/test sigmanil/premiertest/premiertest/x64/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
GESTURE/log/: logesture_20133101362911249.txt  logesture_20133211363885895.txt  logesture_20133211363886027.txt  logesture_20133211363887365.txt  logesture_20133211363887471.txt  logesture_20133231364047038.txt  logesture_20133231364049877.txt  logesture_20133231364050012.txt  logesture_20133231364050045.txt  logesture_20133231364059948.txt  logesture_20133231364060260.txt  logesture_20133231364060277.txt  logesture_20133231364060379.txt  logesture_20133231364060403.txt  logesture_20133231364060713.txt  logesture_20133231364060744.txt  logesture_20133231364060756.txt  logesture_20133231364060797.txt  logesture_20133231364060824.txt  logesture_20133231364060847.txt  logesture_20133231364060932.txt  logesture_20133231364060954.txt  logesture_20133231364060983.txt  logesture_20133231364062140.txt  logesture_20133231364062165.txt  logesture_20133231364062252.txt  logesture_20133231364070614.txt  logesture_20133231364070745.txt  logesture_20133231364070785.txt  logesture_20133241364110622.txt  logesture_20133241364111117.txt  logesture_20133241364111183.txt  (+80 more)
(+148 files in other folders)
